move to slash commands fully

--- a/161Bot/161Bot.csproj
+++ b/161Bot/161Bot.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="YamlDotNet" Version="9.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Modules\" />
+  </ItemGroup>
+
 </Project>
