--- a/161Bot/161Bot.csproj
+++ b/161Bot/161Bot.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net.Labs" Version="2.4.9" />
+    <PackageReference Include="Discord.Net.Labs" Version="3.0.2-pre" />
+    <PackageReference Include="Discord.Net.Labs.Core" Version="3.0.1-pre" />
+    <PackageReference Include="Discord.Net.Labs.Rest" Version="3.0.1-pre" />
+    <PackageReference Include="Discord.Net.Labs.Webhook" Version="3.0.0-pre" />
+    <PackageReference Include="Discord.Net.Labs.WebSocket" Version="3.0.1-pre" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="System.Net.Http.Formatting.Extension" Version="5.2.3" />
     <PackageReference Include="YamlDotNet" Version="9.1.4" />
